--- a/assignment_2.html
+++ b/assignment_2.html
@@ -7,14 +7,16 @@
     <title>Assignment 1</title>
   </head>
   <body>
-    <aside>
-      <ul>
-        <li>w3schools - HTML</li>
-        <li>w3schools - CSS</li>
-        <li>w3schools - JS</li>
-        <li>w3schools - PHP</li>
-      </ul>
-    </aside>
+    <header>
+      <nav>
+        <ul>
+          <li>w3schools - HTML</li>
+          <li>w3schools - CSS</li>
+          <li>w3schools - JS</li>
+          <li>w3schools - PHP</li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section id="about">
         <h1>My first styled page</h1>
