--- a/assignment_2.html
+++ b/assignment_2.html
@@ -3,43 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles2.css" />
-    <title>Assignment 1</title>
+    <link rel="stylesheet" href="style2.css" />
+    <title>Assignment 2</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>w3schools - HTML</li>
-          <li>w3schools - CSS</li>
-          <li>w3schools - JS</li>
-          <li>w3schools - PHP</li>
-        </ul>
-      </nav>
-    </header>
+    <aside>
+      <ul>
+        <li>w3schools - HTML</li>
+        <li>w3schools - CSS</li>
+        <li>w3schools - JS</li>
+        <li>w3schools - PHP</li>
+      </ul>
+    </aside>
     <main>
-      <section id="about">
+      <section class="about-section">
         <h1>My first styled page</h1>
         <p>Welcome to my styled page!</p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-          autem, quis totam ex libero voluptate praesentium ipsum eos, harum
-          nemo veniam veritatis ipsa tempore laborum, maxime facere omnis dolore
-          commodi.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua....
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-          autem, quis totam ex libero voluptate praesentium ipsum eos, harum
-          nemo veniam veritatis ipsa tempore laborum, maxime facere omnis dolore
-          commodi.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
       </section>
-      <section id="content">
+      <section class="content-section">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <p><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></p>
+        <p><b>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</b></p>
       </section>
-      <section id="copyright">
+      <section class="copyright-section">
         <p><i>Made 25 January 2018</i></p>
         <p><i>By myself.</i></p>
       </section>
