--- a/assignment_1.html
+++ b/assignment_1.html
@@ -20,16 +20,12 @@
         <h1>My first styled page</h1>
         <p>Welcome to my styled page!</p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-          autem, quis totam ex libero voluptate praesentium ipsum eos, harum
-          nemo veniam veritatis ipsa tempore laborum, maxime facere omnis dolore
-          commodi.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua....
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
-          autem, quis totam ex libero voluptate praesentium ipsum eos, harum
-          nemo veniam veritatis ipsa tempore laborum, maxime facere omnis dolore
-          commodi.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
       </section>
       <section id="copyright">
