--- a/assignment_1.html
+++ b/assignment_1.html
@@ -7,28 +7,28 @@
     <title>Assignment 1</title>
   </head>
   <body>
-    <aside>
-      <ul>
-        <li>w3schools - HTML</li>
-        <li>w3schools - CSS</li>
-        <li>w3schools - JS</li>
-        <li>w3schools - PHP</li>
+    <aside class="sidebar">
+      <ul class="nav-list">
+        <li class="nav-item">w3schools - HTML</li>
+        <li class="nav-item">w3schools - CSS</li>
+        <li class="nav-item">w3schools - JS</li>
+        <li class="nav-item">w3schools - PHP</li>
       </ul>
     </aside>
     <main>
-      <section>
+      <section class="main-section">
         <h1>My first styled page</h1>
         <p>Welcome to my styled page!</p>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit.sed do
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua....
         </p>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit.sed do
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
       </section>
-      <section id="copyright">
+      <section class="copyright-section">
         <p><i>Made 25 January 2018</i></p>
         <p><i>By myself.</i></p>
       </section>
