--- a/assignment_2.html
+++ b/assignment_2.html
@@ -29,9 +29,19 @@
         </p>
       </section>
       <section class="content-section">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-        <p><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></p>
-        <p><b>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</b></p>
+        <div class="bordered-div">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        </div>
+        <div class="bordered-div">
+          <p>
+            <i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i>
+          </p>
+        </div>
+        <div class="bordered-div">
+          <p>
+            <b>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</b>
+          </p>
+        </div>
       </section>
       <section class="copyright-section">
         <p><i>Made 25 January 2018</i></p>
