updated width and dash line

--- a/assignment_2.html
+++ b/assignment_2.html
@@ -28,6 +28,7 @@
           eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
       </section>
+      <div class="break-point"></div>
       <section class="content-section">
         <div class="bordered-div">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
