--- a/assignment_2.html
+++ b/assignment_2.html
@@ -7,7 +7,7 @@
     <title>Assignment 2</title>
   </head>
   <body>
-    <aside>
+    <aside class="sidebar">
       <ul>
         <li>w3schools - HTML</li>
         <li>w3schools - CSS</li>
